# katie

./: .gitignore  .kateproject  .lgtm.yaml  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT  CONTRIBUTING  INSTALL  LICENSE.BSD  LICENSE.LGPL  LICENSE.LGPLv21  LICENSE.LGPLv3  README  TODO  appveyor.yml  doxygen.conf  header.BSD  header.FDL  header.LGPL  header.LGPL-ONLY  header.LGPL21  header.LGPL3
bindings/: CMakeLists.txt  KtCore.i  KtCore_global.hpp  KtGui.i  NOTE  TODO  test.py  tricks.i  typesystem_KtCore.xml
bindings/KtCore/: katie_qbytearray_wrapper.cpp  katie_qbytearray_wrapper.h  katie_qchar_wrapper.cpp  katie_qchar_wrapper.h  katie_qcoreapplication_wrapper.cpp  katie_qcoreapplication_wrapper.h  katie_qlatin1char_wrapper.cpp  katie_qlatin1char_wrapper.h  katie_qlatin1string_wrapper.cpp  katie_qlatin1string_wrapper.h  katie_qobject_wrapper.cpp  katie_qobject_wrapper.h  katie_qregexp_wrapper.cpp  katie_qregexp_wrapper.h  katie_qstring_wrapper.cpp  katie_qstring_wrapper.h  katie_qstringlist_wrapper.cpp  katie_qstringlist_wrapper.h  katie_qtextboundaryfinder_wrapper.cpp  katie_qtextboundaryfinder_wrapper.h  katie_qvariant_wrapper.cpp  katie_qvariant_wrapper.h  ktcore_module_wrapper.cpp  ktcore_python.h
bindings/core/: qbytearray.i  qchar.i  qcoreapplication.i  qeasingcurve.i  qjsonarray.i  qjsondocument.i  qjsonobject.i  qjsonvalue.i  qlist.i  qobject.i  qregexp.i  qset.i  qstring.i  qstringlist.i  qvariant.i  qvector.i
bindings/gui/: qfontinfo.i  qfontmetrics.i  qwidget.i
src/core/: CMakeLists.txt  qcorecommon_p.h  qt_pch.h
src/dbus/: CMakeLists.txt  qdbus_symbols.cpp  qdbus_symbols_p.h  qdbusabstractadaptor.cpp  qdbusabstractadaptor.h  qdbusabstractadaptor_p.h  qdbusabstractinterface.cpp  qdbusabstractinterface.h  qdbusabstractinterface_p.h  qdbusargument.cpp  qdbusargument.h  qdbusargument_p.h  qdbusconnection.cpp  qdbusconnection.h  qdbusconnection_p.h  qdbusconnectioninterface.cpp  qdbusconnectioninterface.h  qdbusconnectionmanager_p.h  qdbuscontext.cpp  qdbuscontext.h  qdbuscontext_p.h  qdbusdemarshaller.cpp  qdbuserror.cpp  qdbuserror.h  qdbusextratypes.cpp  qdbusextratypes.h  qdbusintegrator.cpp  qdbusintegrator_p.h  qdbusinterface.cpp  qdbusinterface.h  qdbusinterface_p.h  qdbusinternalfilters.cpp  qdbusintrospection.cpp  qdbusintrospection_p.h  qdbusmacros.h  qdbusmarshaller.cpp  qdbusmessage.cpp  qdbusmessage.h  qdbusmessage_p.h  qdbusmetaobject.cpp  (+26 more)
src/declarative/: CMakeLists.txt  declarative.pro  qdeclarativecommon_p.h
src/designer/: CMakeLists.txt  container.h  container.qdoc  customwidget.qdoc  qdesigner_components.h  qdesigner_components_global.h  qdesignercommon_p.h  qdesignerexportwidget.h
src/gui/: CMakeLists.txt  qguicommon_p.h  qguiimages_p.h
src/help/: CMakeLists.txt  qhelp_global.cpp  qhelp_global.h  qhelpcollectionhandler.cpp  qhelpcontentwidget.cpp  qhelpcontentwidget.h  qhelpdatainterface_p.h  qhelpdbreader.cpp  qhelpengine.cpp  qhelpengine.h  qhelpengine_p.h  qhelpenginecore.cpp  qhelpenginecore.h  qhelpgenerator.cpp  qhelpgenerator_p.h  qhelpindexwidget.cpp  qhelpindexwidget.h  qhelpprojectdata.cpp  qhelpprojectdata_p.h  qhelpsearchengine.cpp  qhelpsearchengine.h  qhelpsearchindex_default.cpp  qhelpsearchindex_default_p.h  qhelpsearchindexreader.cpp  qhelpsearchindexreader_clucene.cpp  qhelpsearchindexreader_default.cpp  qhelpsearchindexreader_default_p.h  qhelpsearchindexwriter_clucene.cpp  qhelpsearchindexwriter_default.cpp  qhelpsearchquerywidget.cpp  qhelpsearchquerywidget.h  qhelpsearchresultwidget.cpp  qhelpsearchresultwidget.h
src/imports/: CMakeLists.txt
src/multimedia/: CMakeLists.txt
src/network/: CMakeLists.txt  qnetworkcommon_p.h
src/opengl/: CMakeLists.txt  qgl.cpp  qgl.h  qgl_egl.cpp  qgl_egl_p.h  qgl_mac.mm  qgl_p.h  qgl_qpa.cpp  qgl_qws.cpp  qgl_win.cpp  qgl_wince.cpp  qgl_x11.cpp  qgl_x11egl.cpp  qglbuffer.cpp  qglbuffer.h  qglcolormap.cpp  qglcolormap.h  qglextensions.cpp  qglextensions_p.h  qglframebufferobject.cpp  qglframebufferobject.h  qglframebufferobject_p.h  qglfunctions.cpp  qglfunctions.h  qglpaintdevice.cpp  qglpixelbuffer.cpp  qglpixelbuffer.h  qglpixelbuffer_egl.cpp  qglpixelbuffer_mac.mm  qglpixelbuffer_p.h  qglpixelbuffer_stub.cpp  qglpixelbuffer_win.cpp  qglpixelbuffer_x11.cpp  qglpixmapfilter.cpp  qglpixmapfilter_p.h  qglscreen_qws.cpp  qglscreen_qws.h  qglshaderprogram.cpp  qglshaderprogram.h  qglwindowsurface_qws.cpp  (+16 more)
src/phonon/: CMakeLists.txt  NOTE  abstractaudiooutput.cpp  abstractmediastream.cpp  audiodataoutput.cpp  audiooutput.cpp  audiooutputadaptor.cpp  backendcapabilities.cpp  backendcapabilities.h  effect.cpp  effectparameter.h  effectwidget.cpp  factory.cpp  globalconfig.cpp  globalstatic_p.h  iodevicestream.cpp  mediacontroller.cpp  mediaobject.cpp  mediasource.cpp  objectdescription.cpp  objectdescription.h  objectdescription_p.h  objectdescriptionmodel.cpp  objectdescriptionmodel.h  path.h  phononconfig_p.h.in  phononnamespace.h.in  pulsestream.cpp  pulsesupport.cpp  seekslider.cpp  statesvalidator.cpp  swiftslider.cpp  videoplayer.cpp  videowidget.cpp  volumefadereffect.cpp  volumeslider.cpp
src/plugins/: CMakeLists.txt
src/script/: CMakeLists.txt  JavaScriptCore.pri  qscriptcommon_p.h
src/scripttools/: CMakeLists.txt  qscripttoolscommon_p.h  qscripttoolsresources_p.h
src/sql/: CMakeLists.txt
src/svg/: CMakeLists.txt  qgraphicssvgitem.cpp  qgraphicssvgitem.h  qsvgfont.cpp  qsvgfont_p.h  qsvggenerator.cpp  qsvggenerator.h  qsvggraphics.cpp  qsvggraphics_p.h  qsvghandler.cpp  qsvghandler_p.h  qsvgnode.cpp  qsvgnode_p.h  qsvgrenderer.cpp  qsvgrenderer.h  qsvgstructure.cpp  qsvgstructure_p.h  qsvgstyle.cpp  (+5 more)
tests/: CMakeLists.txt  NEWTESTS  xorg_16bit.conf
translations/: CMakeLists.txt  README  qt.pot  qt_ar.po  qt_ar.ts  qt_cs.po  qt_cs.ts  qt_da.po  qt_da.ts  qt_de.po  qt_de.ts  qt_es.po  qt_es.ts  qt_eu.po  qt_eu.ts  qt_fa.po  qt_fa.ts  qt_fr.po  qt_fr.ts  qt_gl.po  qt_gl.ts  qt_he.po  qt_he.ts  qt_hu.po  qt_hu.ts  qt_ja.po  qt_ja.ts  qt_ko.po  qt_ko.ts  qt_lt.po  qt_lt.ts  qt_pl.po  qt_pl.ts  qt_pt.po  qt_pt.ts  qt_ru.po  qt_ru.ts  qt_sk.po  qt_sk.ts  qt_sl.po  (+39 more)
(+4647 files in other folders)
